# descargador-a1

./: .gitignore  index.html  package-lock.json  package.json  run-tauri-dev.cmd  vite.config.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tools/: serve-dist.mjs
