[package]
name = "descargador-a1"
version = "1.1.0"
description = "Video download queue powered by yt-dlp"
authors = ["Jaell"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["brotli", "charset", "deflate", "gzip", "rustls-tls"] }
scraper = "0.24"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "sync"] }
url = "2"
which = "8"
